# rust-lambda-pulumi

./: Cargo.toml  Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package.json  pnpm-lock.yaml
src/: app.rs  err.rs  main.rs
