[package]
name = "rust-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.13.5", features = ["axum", "axum-extra"] }
axum = "0.7"
axum-extra = "0.9"
chrono = { version = "0.4.39", features = ["serde"] }
lambda_http = "0.13.0"
schemars = "0.8.21"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "2.0.7"
tokio = { version = "1", features = ["macros"] }
